# Cacheness

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yml  pyproject.toml  verify_platform.py
.beads/: issues.jsonl
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: release.yml
benchmarks/: README.md  backend_comparison_benchmark.py  comprehensive_backend_benchmark.py  compression_benchmark.py  decorator_benchmark.py  handler_benchmark.py  list_performance_analysis.py  management_ops_benchmark.py  optimization_results.py  quick_backend_demo.py  security_benchmark.py  serialization_benchmark.py  sqlite_metadata_analysis.py  sqlite_optimization_test.py  test_entry_caching.py  test_memory_backend.py  test_performance_comparison.py  test_realistic_caching.py  threshold_benchmark.py
config/: README.md  test_config.json  test_config.yaml
docs/: API_REFERENCE.md  ARBITRARY_TIME_INCREMENTS.md  ARCHITECTURE.md  BACKEND_SELECTION.md  BENCHMARK_PLAN.md  BLOB_STORE.md  CODE_REVIEW_FIXES.md  COMPARISON_TO_EXISTING_SOLUTIONS.md  CONFIGURATION.md  CROSS_PLATFORM_GUIDE.md  CUSTOM_GAP_DETECTION.md  CUSTOM_METADATA.md  DEVELOPMENT_PLANNING.md  DILL_INTEGRATION.md  FUTURE_IMPROVEMENTS.md  LOCAL_TEST_ENVIRONMENT.md  LOCAL_TEST_ENVIRONMENT_QUICK_REFERENCE.md  MISSING_MANAGEMENT_API.md  PANDAS_API_AUDIT.md  PANDAS_COMPATIBILITY.md  PERFORMANCE.md  PLUGIN_DEVELOPMENT.md  README.md  SECURITY.md  SQL_CACHE.md  TENSORFLOW_HANDLER_STATUS.md  TENSORFLOW_TENSOR_GUIDE.md  TROUBLESHOOTING.md  WINDOWS_COMPATIBILITY.md  plan-storageMode.prompt.prompt.md
examples/: README.md  api_request_caching.py  beginner_sql_cache.py  checkpoint_storage.py  configurable_serialization_demo.py  custom_metadata_demo.py  custom_metadata_postgresql.py  database_backend_comparison.py  dill_class_caching_demo.py  intelligent_storage_demo.py  management_operations_demo.py  ml_model_versioning.py  ml_pipeline_caching.py  pipeline_artifact_storage.py  s3_caching.py  simple_api_caching.py  simple_backend_demo.py  simple_config_demo.py  simple_function_caching.py  simple_ml_pipeline.py  simple_object_caching.py  simple_stock_cache.py  stock_cache_example.py
scripts/: install-hooks.ps1  install-hooks.sh  quality-check.ps1  quality-check.sh  setup_local_env.bat  setup_local_env.py
scripts/hooks/: pre-commit
src/cacheness/: __init__.py  compress_pickle.py  config.py  core.py  custom_metadata.py  decorators.py  error_handling.py  file_hashing.py  handlers.py  interfaces.py  json_utils.py  metadata.py  security.py  serialization.py  sql_cache.py  threshold_benchmark.py  utils.py
src/cacheness/storage/: __init__.py  blob_store.py  compression.py  security.py
src/cacheness/storage/backends/: __init__.py  base.py  blob_backends.py  postgresql_backend.py  s3_backend.py
src/cacheness/storage/handlers/: __init__.py
tests/: conftest.py  test_backend_compatibility.py  test_backend_parity.py  test_blob_backend_registry.py  test_blob_namespace.py  test_blob_store.py  test_cache_integrity.py  test_cache_integrity_verification.py  test_cache_key_consistency.py  test_cache_signing.py  test_compress_pickle.py  test_concurrency_stress.py  test_config_integration_example.py  test_config_options.py  test_config_validation.py  test_configurable_serialization.py  test_core.py  test_cross_system_compatibility.py  test_custom_metadata.py  test_custom_metadata_backends.py  test_decorators.py  test_directory_sharding.py  test_docker_integration.py  test_error_handling.py  test_fault_injection.py  test_file_hashing.py  test_full_metadata_storage.py  test_handler_registration.py  test_handlers.py  test_integration.py  test_interfaces.py  test_json_schema_versioning.py  test_json_utils.py  test_metadata.py  test_metadata_backend_registry.py  test_namespace_config.py  test_namespace_plumbing.py  test_pandas_compatibility.py  test_parallel_hashing.py  test_path_hashing.py  (+19 more)
